<?xml version="1.0"?>
<package format="2">
  <name>alphabot_driver</name>
  <version>0.0.0</version>
  <description>The alphabot_driver package</description>

  <maintainer email="thingsjimenez@gmail.com">Santiago Jiménez</maintainer>
  <author email="thingsjimenez@gmail.com">Santiago Jiménez</author>

  <license>GPLv3</license>
  <url type="website">http://github.com/thingsjimenez</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <depend>alphabot_msgs</depend>

  <export>

  </export>
</package>
