<?xml version="1.0"?>
<package format="2">
  <name>alphabot_msgs</name>
  <version>0.0.0</version>
  <description>The alphabot_msgs package</description>

  <maintainer email="thingsjimenez@gmail.com">Santiago Jiménez</maintainer>
  <author email="thingsjimenez@gmail.com">Santiago Jiménez</author>

  <license>GPLv3</license>
  <url type="website">http://github.com/thingsjimenez</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
  
  </export>
</package>
